feat: adding ability to refresh token on token filler and using for msgraph lookup of users (#2254)